# Euclid

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  config.h.in
app/analysis_pipeline/: CMakeLists.txt  main.cpp
app/batch_io/: CMakeLists.txt  main.cpp
app/bounding/: CMakeLists.txt  main.cpp
app/commute/: CMakeLists.txt  main.cpp
app/descriptor/: CMakeLists.txt  main.cpp
app/distance/: CMakeLists.txt  main.cpp
app/feature_detection/: CMakeLists.txt  main.cpp
app/geometry/: CMakeLists.txt  main.cpp
app/io/: CMakeLists.txt  main.cpp
app/mesh_processing/: CMakeLists.txt  main.cpp
app/meshutil/: CMakeLists.txt  main.cpp
app/parameterization/: CMakeLists.txt  main.cpp
app/primitive/: CMakeLists.txt  main.cpp
app/render/: CMakeLists.txt  main.cpp
app/segmentation/: CMakeLists.txt  main.cpp
app/serialize/: CMakeLists.txt  main.cpp
app/shape_matching/: CMakeLists.txt  main.cpp
app/stats/: CMakeLists.txt  main.cpp
app/surface_recon/: CMakeLists.txt  main.cpp
app/topology/: CMakeLists.txt  main.cpp
app/ttk/: CMakeLists.txt  main.cpp
app/view_selection/: CMakeLists.txt  main.cpp
cmake/: EuclidConfig.cmake  EuclidTargets.cmake
docs/: Makefile  UserGuide.md  cmake_install.cmake
examples/: CMakeLists.txt  config.h
examples/bounding_volume/: CMakeLists.txt  main.cpp
examples/gauss_curvature/: main.cpp
examples/geodesics/: CMakeLists.txt  main.cpp
examples/primitive/: CMakeLists.txt  main.cpp
examples/random_walk/: CMakeLists.txt  main.cpp
examples/render/: CMakeLists.txt  main.cpp
examples/scp/: CMakeLists.txt  main.cpp
examples/spin_image/: CMakeLists.txt  main.cpp
examples/statistics/: CMakeLists.txt  main.cpp
examples/topology/: CMakeLists.txt  main.cpp
examples/view_selection/: CMakeLists.txt  main.cpp
examples/wks/: CMakeLists.txt  main.cpp
include/Euclid/Descriptor/src/: SpinImage.cpp
include/Euclid/Geometry/src/: TriMeshGeometry.cpp
include/Euclid/MeshUtil/src/: PrimitiveGenerator.cpp
include/Euclid/Parameterization/src/: SCP.cpp
include/Euclid/Render/src/: Rasterizer.cpp
include/Euclid/SurfaceDelaunay/src/: DelaunayMesh.cpp
test/: CMakeLists.txt  Makefile  cmake_install.cmake  config.h  config.h.in  main.cpp
test/Descriptor/: test_HKS.cpp  test_SpinImage.cpp  test_WKS.cpp
test/Distance/: test_BiharmonicDistance.cpp  test_DiffusionDistance.cpp
test/FeatureDetection/: test_NativeHKS.cpp
test/Parameterization/: test_RicciFlow.cpp
test/Render/: test_Rasterizer.cpp
