add_executable(euclid_mesh_processing main.cpp)
target_include_directories(euclid_mesh_processing PRIVATE ${CMAKE_BINARY_DIR}/app)
target_link_libraries(euclid_mesh_processing PRIVATE Euclid::Euclid)
set_target_properties(euclid_mesh_processing PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/apps)