add_executable(euclid_parameterization main.cpp)
target_include_directories(euclid_parameterization PRIVATE ${CMAKE_BINARY_DIR}/app)
target_link_libraries(euclid_parameterization PRIVATE Euclid::Euclid)
set_target_properties(euclid_parameterization PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/apps)